@@ -107,24 +107,23 @@ Coord retreatLocation(const Coord& p1, const Coord& p2)
 	int j = 0;
 	int k = 0;
 
-	if(p1.x < p2.x){
+	if(p1.x < p2.x) {
         j = p1.x - 1;
 	}
 
-	if(p1.x > p2.x){
+	if(p1.x > p2.x) {
         j = p1.x + 1;
 	}
 
-    if(p1.y < p2.y){
+    if(p1.y < p2.y) {
         k = p1.y - 1;
 	}
 
-    if(p1.y > p2.y){
+    if(p1.y > p2.y) {
         k = p1.y + 1;
 	}
 
     return Coord(j,k);
-
 }
 
 
