@@ -2,6 +2,8 @@ version 0.96.4alpha1
 	* New AI Smart Bot and Quant Bot
 	* New key bindings: Cycle through construction yards with 'H' and factories with 'F'
 	* Improve performance of Fog of War
+	* Units can now be instructed to find the next repair yard on their own
+	* New game option "Manual Carryall Drops"
 	* Move to fix-point math for game logic as floating-point operations may differ between platforms and compilers
 	* Bugfix (Bug 3610246): Mentat help used wrong houses (Thanks to kuffar for reporting that bug)
 
